--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "functions": {
-    "api/*.js": {
-      "runtime": "nodejs18.x"
+  "build": {
+    "env": {
+      "NODE_VERSION": "18"
     }
   }
 }
